Release Note

* current
  * changed starting jobs not to be updated by subsequent heartbeats 
  * using panda instead of user account in EP
  * removed setReplicaMetaDataAttribute from EP
  * added partial finish
  * setting None to pre-merged log files when sending ES merge jobs
  * added protection to SetupperAtlas against new files copied after JEDI file lookup
  * fixed EventPicking to use only complete replicas
  * removed constraint with T1 data from TA
  * added soft finish
  * using ignore_availability when making subscriptions
  * making _dis w/o source when missing at T1
  * fixed ES retry
  * changed not to use pre-merged log files from failed jobs
  * changed TA to use old=True for listDatasetReplicas
  * sending sourceSite to the pilot
  * UnsupportedOperation as fatal 
  * channged getJob to ignore fairshare for pmerge
  * registering LB info to log
  * changed for jobName
  * added recordRetryHistory in insertNewJob
  * filling outPandaID
  * using rucio API for file registration
  * fixed rebro for jobDef=0
  * fixed rebro for defined
  * changed TA to take secondary volume into account
  * fixed TA for dataset aggregation
  * fixed reassignSite
  * added increaseRamLimitJEDI
  * fixed lockJobsForReassign
  * added killUnfinishedJobs
  * fixed retryJob for pseudo_input
  * fixed cyclic import in panda_config
  * fixed for UNDEFINED in jobReport.json
  * sending prodDBlocks to the pilot
  * changed updateJob to avoid row lock contantation
  * setting subJobStatus to cancelled ES jobs
  * extracting # of events from json
  * fixed getFreeDiskSize in PD2P
  * added retry for ES merge when ERR_ESMERGERECOVERABLE
  * fixed getScriptOfflineRunning for did
  * fixed killJob for ES
  * chnaged Setupper for InvalidRSEExpression
  * changed Adder to extract important DDM error messages
  * setting lifetime to _dis
  * added throttled
  * changed for originpandaid
  * changed event-picking to work with non deterministic URLs